[workspace]
resolver = "2"
members = [
    "packages/tokimo-packages-vm-core",
    "packages/tokimo-packages-vm-rpc",
    "packages/tokimo-packages-vm-agent",
    "packages/tokimo-packages-vm-linux",
    "packages/tokimo-packages-vm-macos",
    "packages/tokimo-packages-vm-wsl",
    "packages/tokimo-packages-vm",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["tokimo contributors"]
repository = "https://github.com/tokimo-lab/tokimo-kvm"

[workspace.dependencies]
tokimo-packages-vm-core    = { path = "packages/tokimo-packages-vm-core" }
tokimo-packages-vm-rpc     = { path = "packages/tokimo-packages-vm-rpc" }
tokimo-packages-vm-linux   = { path = "packages/tokimo-packages-vm-linux" }
tokimo-packages-vm-macos   = { path = "packages/tokimo-packages-vm-macos" }
tokimo-packages-vm-wsl     = { path = "packages/tokimo-packages-vm-wsl" }

async-trait = "0.1"
thiserror   = "1"
anyhow      = "1"
tokio       = { version = "1", features = ["full"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
libc        = "0.2"
bytes       = "1"
uuid        = { version = "1", features = ["v4", "serde"] }
postcard    = { version = "1", features = ["alloc", "use-std"] }
clap        = { version = "4", features = ["derive"] }
